made some changes to package.json

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -18,7 +18,7 @@ html
             | | 
             a(href='/logout') Logout
             | |
-            a(href= '/items') Items
+            a(href= '/items') Insert Data
             | |
             a(href='/users') Users
             | |
